@@ -16,6 +16,7 @@
 - Bugfix: Better Base64 detection.
 - Bugfix: The error handler was not removed in the file reader.
 - Bugfix: The no-js feedback handles CSP headers.
+- Bugfix: The translations are located in a div in the header.
 
 5.0.3
 - Bugfix: Possible warning in file reader.
